fix eslint issues

--- a/src/components/Box/Box.scss
+++ b/src/components/Box/Box.scss
@@ -3,6 +3,7 @@
   padding: 1rem;
   border: 1px solid gray;
   display: inline-block;
+  background-color: rgba(136, 0, 255, 0.12);
 }
 
 my-box {
@@ -10,6 +11,7 @@ my-box {
   padding: 1rem;
   border: 1px solid gray;
   display: inline-block;
+  background-color: rgba(136, 0, 255, 0.12);
 }
 
 .test-component--small {
