--- a/src/components/Box/BoxDemos.html
+++ b/src/components/Box/BoxDemos.html
@@ -11,3 +11,22 @@
 
   My other default content
 </my-box>
+
+
+<my-box>
+  
+
+  <div>
+    Custom default slotted content #1
+  </div>
+
+  <div slot="red">
+    Custom Red slotted content
+  </div>
+
+  <!--<div slot="green">
+    My Green Content 2
+  </div>-->
+
+  Custom default slotted content #2
+</my-box>
