refactor: switch to using local images for perf testing

--- a/src/components/Card/CardDemos.html
+++ b/src/components/Card/CardDemos.html
@@ -1,13 +1,13 @@
 
 <h3>Simple card with slotted image + default text content.</h3>
 <my-card>
-  <img src="https://placekitten.com/500/300" slot="image">
+  <img src="/placeholder.jpg" slot="image" width="500" height="300">
   Test Card #1
 </my-card>
 
 <h3>Simple card with slotted image + no default text content.</h3>
 <my-card>
-  <img src="https://placekitten.com/500/300" slot="image">
+  <img src="/placeholder.jpg" slot="image" width="500" height="300">
 </my-card>
 
 <h3>Simple card default text content.</h3>
@@ -25,18 +25,18 @@
 <h3>Simple card with another card in the default slot</h3>
 <my-card>
   <my-card>
-    <img src="https://placekitten.com/500/300" slot="image">
+    <img src="/placeholder.jpg" slot="image" width="500" height="300">
   </my-card>
 </my-card>
 
 <h3>Simple card with another card + a paragraph in the default slot + slotted image</h3>
 <my-card>
-  <img src="https://placekitten.com/500/300" slot="image">
+  <img src="/placeholder.jpg" slot="image" width="500" height="300">
 
   <p>Test Card #6</p>
 
   <my-card>
-    <img src="https://placekitten.com/500/300" slot="image">
+    <img src="/placeholder.jpg" slot="image" width="500" height="300">
 
     Nested Card
   </my-card>
